--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "@smallwei/avue": "next",
     "element-plus": "^2.2.17",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.21",
     "sticky-sidebar-v2": "^1.1.1",
     "undraw-ui": "^0.6.9",
