--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^3.0.2",
     "@vitejs/plugin-vue": "^3.0.3",
+    "terser": "^5.16.1",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-icons": "^0.14.11",
     "unplugin-vue-components": "^0.22.8",
