fix: 详情页样式调整&feat: 增加首页搜索框

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@smallwei/avue": "next",
+    "axios": "^1.2.6",
     "element-plus": "^2.2.17",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.21",
