--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.6",
     "dayjs": "^1.11.10",
     "element-plus": "^2.2.17",
+    "github-markdown-css": "^5.3.0",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.2",
     "nprogress": "^0.2.0",
