--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "axios": "^1.2.6",
     "dayjs": "^1.11.10",
     "element-plus": "^2.2.17",
-    "github-markdown-css": "^5.3.0",
+    "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.21",
+    "sass": "^1.69.7",
     "sticky-sidebar-v2": "^1.1.1",
     "undraw-ui": "^1.0.7",
     "vue": "^3.2.38",
