--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^11.9.0",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.2",
+    "markdown-it-code-copy": "^0.1.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.21",
     "sass": "^1.69.7",
