--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "unplugin-icons": "^0.14.11",
     "unplugin-vue-components": "^0.22.8",
     "vite": "^5.0.0",
-    "vite-plugin-inspect": "^0.8.1"
+    "vite-plugin-inspect": "^0.8.1",
+    "vite-plugin-node-polyfills": "^0.19.0",
+    "vite-plugin-top-level-await": "^1.4.1"
   }
 }
