--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@gerhobbelt/markdown-it-github-headings": "^2.0.0-2",
+    "@lottiefiles/lottie-player": "^2.0.4",
     "axios": "^1.2.6",
     "dayjs": "^1.11.10",
     "element-plus": "^2.6.0",
@@ -20,7 +21,6 @@
     "pinia": "^2.0.21",
     "sass": "^1.69.7",
     "sticky-sidebar-v2": "^1.1.1",
-    "undraw-ui": "^1.0.7",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
