fix: 修改默认头像源

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL=https://api.lizhixu.cn
-VITE_MULTIAVATAR=//api.multiavatar.com/
+VITE_CDN_DOMAIN=https://img2.lizhixu.cn
+VITE_DICEBEAR_DOMAIN=https://api.dicebear.com/9.x/lorelei/png?backgroundColor=b6e3f4&seed=
