--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
-    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@element-plus/icons-vue": "^2.0.10",
     "@gerhobbelt/markdown-it-github-headings": "^2.0.0-2",
     "@lottiefiles/lottie-player": "^2.0.4",
@@ -25,6 +23,7 @@
     "sass": "^1.69.7",
     "sticky-sidebar-v2": "^1.1.1",
     "vue": "^3.2.38",
+    "vue-froala-wysiwyg": "^4.2.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
