--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.10",
     "element-plus": "^2.6.0",
     "highlight.js": "^11.9.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "markdown-it": "^13.0.2",
