--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+VITE_APP_URL=https://lizhixu.cn
 VITE_API_URL=https://api.lizhixu.cn
 VITE_CDN_DOMAIN=https://img2.lizhixu.cn
 VITE_DICEBEAR_DOMAIN=https://api.dicebear.com/9.x/lorelei/png?backgroundColor=b6e3f4&seed=
