--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,23 @@ jobs:
           ./upx sync dist/ / --delete
           ./upx logout
         #同步到腾讯云
-      - name: Upload COS
-        uses: zkqiang/tencent-cos-action@v0.1.0
-        with:
-          args: delete -r -f / && upload -r ./dist/ /
-          secret_id: ${{ secrets.SECRETID }}
-          secret_key: ${{ secrets.SECRETKEY }}
-          bucket: ${{ secrets.BUCKET }}
-          region: ${{ secrets.REGION }}
+      - name: 安装腾讯云依赖
+        run: |
+          sudo pip install coscmd
+          sudo pip install tccli
+      - name: 配置腾讯云依赖
+        env:
+          SECRET_ID: ${{ secrets.SECRETID }}
+          SECRET_KEY: ${{ secrets.SECRETKEY }}
+          BUCKET: ${{ secrets.BUCKET }}
+          REGION: ${{ secrets.REGION }}
+        run: |
+          coscmd config -a $SECRET_ID -s $SECRET_KEY -b $BUCKET -r $REGION
+          tccli configure set secretId $SECRET_ID
+          tccli configure set secretKey $SECRET_KEY
+          tccli configure set region $REGION
+
+      - name: 上传到腾讯云COS并刷新CDN
+        run: |
+          coscmd upload -rfs --delete ./ /
+          tccli cdn PurgePathCache --cli-unfold-argument --Paths https://lizhixu.cn/ --FlushType flush
