--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,5 @@ jobs:
 
       - name: 上传到腾讯云COS并刷新CDN
         run: |
-          coscmd upload -rfs --delete ./ /
+          coscmd upload -rfs --delete ./dist /
           tccli cdn PurgePathCache --cli-unfold-argument --Paths https://lizhixu.cn/ --FlushType flush
