feat: 评论组件内容补充

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_APP_URL=https://lizhixu.cn
 VITE_API_URL=https://api.lizhixu.cn
 VITE_CDN_DOMAIN=https://img2.lizhixu.cn
 VITE_DICEBEAR_DOMAIN=https://api.dicebear.com/9.x/lorelei/png?backgroundColor=b6e3f4&seed=
+VITE_CHANGYAN_APPID=cyx6aSIDq
+VITE_CHANGYAN_CONF=prod_f539c5de4359f3e1215cfc4e744b2604
