--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lottiefiles/lottie-player": "^2.0.4",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
+    "@watermarkify/vue-watermark": "^0.0.7",
     "axios": "^1.2.6",
     "dayjs": "^1.11.10",
     "element-plus": "^2.6.0",
