--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_CDN_DOMAIN=https://img2.lizhixu.cn
 VITE_DICEBEAR_DOMAIN=https://api.dicebear.com/9.x/lorelei/png?backgroundColor=b6e3f4&seed=
 VITE_CHANGYAN_APPID=cyx6aSIDq
 VITE_CHANGYAN_CONF=prod_f539c5de4359f3e1215cfc4e744b2604
+VITE_BAIKE_API_URL=https://baike.baidu.com/api/openapi
