--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "@watermarkify/vue-watermark": "^0.0.7",
-    "axios": "^1.2.6",
+    "axios": "1.7.4",
     "dayjs": "^1.11.10",
     "element-plus": "^2.6.0",
     "highlight.js": "^11.9.0",
@@ -36,9 +36,12 @@
     "unplugin-auto-import": "^0.11.2",
     "unplugin-icons": "^0.14.11",
     "unplugin-vue-components": "^0.22.8",
-    "vite": "^5.0.0",
+    "vite": "5.4.6",
     "vite-plugin-inspect": "^0.8.1",
     "vite-plugin-node-polyfills": "^0.19.0",
     "vite-plugin-top-level-await": "^1.4.1"
+  },
+  "volta": {
+    "node": "20.18.0"
   }
 }
