--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vite-plugin-top-level-await": "^1.4.1"
   },
   "volta": {
-    "node": "20.18.0"
+    "node": "20.18.0",
+    "yarn": "4.5.1"
   }
 }
