--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "@element-plus/icons-vue": "^2.0.10",
     "@gerhobbelt/markdown-it-github-headings": "^2.0.0-2",
     "@lottiefiles/lottie-player": "^2.0.4",
-    "@wangeditor/editor": "^5.1.23",
-    "@wangeditor/editor-for-vue": "^5.1.12",
-    "@watermarkify/vue-watermark": "^0.0.7",
     "axios": "1.7.4",
     "dayjs": "^1.11.10",
     "element-plus": "^2.6.0",
@@ -27,7 +24,8 @@
     "sass": "^1.69.7",
     "sticky-sidebar-v2": "^1.1.1",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-google-adsense": "^1.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^5.3.2",
